TMC v0.0.5.2 || Change method to reset map

--- a/TMC_App/src/main/java/TMC/TMC_Application.form
+++ b/TMC_App/src/main/java/TMC/TMC_Application.form
@@ -9,10 +9,13 @@
             <Property name="text" type="java.lang.String" value="Plik"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem_NewFile">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Nowy"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem_NewFileActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem3">
               <Properties>
