--- a/TMC_App/src/main/java/TMC/TMC_Application.form
+++ b/TMC_App/src/main/java/TMC/TMC_Application.form
@@ -12,7 +12,7 @@
     </Component>
     <Component class="javax.swing.JFileChooser" name="jFileChooser_OpenFile">
     </Component>
-    <Menu class="javax.swing.JMenuBar" name="MenuJMenu">
+    <Menu class="javax.swing.JMenuBar" name="jMenuBar_Menu">
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="jMenu_File">
           <Properties>
@@ -61,16 +61,13 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Tank Map Creator"/>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[800, 700]"/>
-    </Property>
     <Property name="resizable" type="boolean" value="false"/>
     <Property name="size" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[800, 700]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
-    <SyntheticProperty name="menuBar" type="java.lang.String" value="MenuJMenu"/>
+    <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar_Menu"/>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
@@ -89,17 +86,17 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="MainJPanel" alignment="0" min="-2" max="-2" attributes="0"/>
+          <Component id="jPanel_Main" alignment="0" min="-2" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="MainJPanel" min="-2" pref="644" max="-2" attributes="0"/>
+          <Component id="jPanel_Main" min="-2" pref="644" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JPanel" name="MainJPanel">
+    <Container class="javax.swing.JPanel" name="jPanel_Main">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="cc" red="cc" type="rgb"/>
@@ -121,7 +118,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="GridPanelJPanel" max="32767" attributes="0"/>
+                      <Component id="jPanel_Grid" max="32767" attributes="0"/>
                       <Component id="jLabel_Description" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -134,7 +131,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Component id="jPanel_Tools" alignment="0" max="32767" attributes="0"/>
               <Group type="102" alignment="1" attributes="0">
-                  <Component id="GridPanelJPanel" min="-2" max="-2" attributes="0"/>
+                  <Component id="jPanel_Grid" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabel_Description" min="-2" pref="30" max="-2" attributes="0"/>
               </Group>
@@ -142,7 +139,7 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Container class="javax.swing.JPanel" name="GridPanelJPanel">
+        <Container class="javax.swing.JPanel" name="jPanel_Grid">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="cc" green="cc" red="cc" type="rgb"/>
@@ -201,7 +198,7 @@
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jComboBox_CreatingMapOptions" min="-2" pref="83" max="-2" attributes="0"/>
-                                  <Component id="ResetPanelJButton" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jButton_ResetPanel" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
@@ -220,7 +217,7 @@
                       <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
                       <Component id="jLabel_DeleteBlock" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="ResetPanelJButton" min="-2" max="-2" attributes="0"/>
+                      <Component id="jButton_ResetPanel" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel_LangPL" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -252,7 +249,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace pref="12" max="32767" attributes="0"/>
-                          <Component id="selectColorJComboBox" min="-2" pref="131" max="-2" attributes="0"/>
+                          <Component id="jComboBox_SelectColor" min="-2" pref="131" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -261,14 +258,14 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="selectColorJComboBox" min="-2" max="-2" attributes="0"/>
+                          <Component id="jComboBox_SelectColor" min="-2" max="-2" attributes="0"/>
                           <EmptySpace pref="278" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
               </Layout>
               <SubComponents>
-                <Component class="javax.swing.JComboBox" name="selectColorJComboBox">
+                <Component class="javax.swing.JComboBox" name="jComboBox_SelectColor">
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                       <StringArray count="5">
@@ -281,7 +278,7 @@
                     </Property>
                   </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="selectColorJComboBoxActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBox_SelectColorActionPerformed"/>
                   </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
@@ -349,12 +346,12 @@
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel_LangENGMouseClicked"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JButton" name="ResetPanelJButton">
+            <Component class="javax.swing.JButton" name="jButton_ResetPanel">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Reset"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ResetPanelJButtonActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton_ResetPanelActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
